# AR_Marker_and_Voxel_Carving

./: CMakeLists.txt  ReadMe.md
InputData/tuzi/: list.txt
Src/: carving2.cpp  main.cpp  multiImage.h  voxel.h
